# Q2RTXPerimental

./: .gitignore  CMakeLists.txt  CMakeSources.cmake  IMPLEMENTATION_SUMMARY.md  Q2RTXPerimental_ded  Q2RTXPerimentalcode  WIKI-MIGRATION.md  WIKI-STRUCTURE.md  changelog.md  convert.py  cpp.hint  dedicated_coop_test.bat  hotpath.md  license.txt  notice.txt  plan_testdummy.md  push-wiki-migration.sh  readme.md  theculprit.md  todo.md  todo_future.md  version.sh
src/: CMakeLists.txt
src/baseq2/: g_ai.cpp  g_local.h  g_main.c  g_monster.c  g_monster.cpp  g_ptrs.cpp  g_save.cpp  g_save.h  g_spawn.cpp  m_actor.cpp  m_brain.cpp  m_gladiator.cpp  m_gunner.cpp  m_hover.cpp  m_infantry.cpp  m_medic.cpp  m_supertank.cpp  p_view.cpp  p_weapon.cpp
src/baseq2/clgame/: clg_client.cpp  clg_client.h  clg_eax.cpp  clg_effects.cpp  clg_effects.h  clg_entities.cpp  clg_entities.h  clg_gamemode.cpp  clg_input.cpp  clg_input.h  clg_local.h  clg_local_entities.cpp  clg_local_entities.h  clg_main.cpp  clg_packet_entities.cpp  clg_packet_entities.h  clg_parse.cpp  clg_parse.h  clg_precache.cpp  clg_predict.cpp  clg_predict.h  clg_screen.cpp  clg_screen.h  clg_temp_entities.cpp  clg_temp_entities.h  clg_view.cpp  clg_view.h
src/baseq2/sharedgame/: sg_gamemode.cpp  sg_gamemode.h  sg_local.h  sg_misc.cpp  sg_misc.h  sg_muzzleflashes.h  sg_muzzleflashes_monsters.c  sg_muzzleflashes_monsters.h  sg_pmove.cpp  sg_pmove.h  sg_pmove_slidemove.cpp  sg_pmove_slidemove.h  sg_shared.h  sg_time.h
src/baseq2/svgame/: g_ai.cpp  g_chase.cpp  g_cmds.cpp  g_combat.cpp  g_func.cpp  g_gamemode.cpp  g_items.cpp  g_local.h  g_main.cpp  g_misc.cpp  g_monster.cpp  g_phys.cpp  g_ptrs.cpp  g_save.cpp  g_save.h  g_spawn.cpp  g_spotlight.cpp  g_svcmds.cpp  g_target.cpp  g_trigger.cpp  g_turret.cpp  g_utils.cpp  g_weapon.cpp  genptr.py  m_actor.cpp  m_berserk.cpp  m_boss2.cpp  m_boss3.cpp  m_boss31.cpp  m_boss32.cpp  m_brain.cpp  m_chick.cpp  m_flipper.cpp  m_float.cpp  m_flyer.cpp  m_gladiator.cpp  m_gunner.cpp  m_hover.cpp  m_infantry.cpp  m_insane.cpp  (+12 more)
src/baseq2rtxp/clgame/: clg_client.cpp  clg_client.h  clg_eax.cpp  clg_eax.h  clg_eax_effects.h  clg_effects.cpp  clg_effects.h  clg_entities.cpp  clg_entities.h  clg_events.cpp  clg_events.h  clg_events_entities.cpp  clg_events_entities.h  clg_events_player.cpp  clg_events_player.h  clg_frame.cpp  clg_frame.h  clg_gamemode.cpp  clg_hud.cpp  clg_hud.h  clg_input.cpp  clg_input.h  clg_local.h  clg_local_entities.cpp  clg_local_entities.h  clg_main.cpp  clg_main.h  clg_packet_entities.cpp  clg_packet_entities.h  clg_parse.cpp  clg_parse.h  clg_playerstate.cpp  clg_playerstate.h  clg_precache.cpp  clg_precache.h  clg_predict.cpp  clg_predict.h  clg_screen.cpp  clg_screen.h  clg_temp_entities.cpp  (+9 more)
src/baseq2rtxp/sharedgame/: sg_cmd_messages.h  sg_entities.cpp  sg_entities.h  sg_entity_effects.h  sg_entity_events.h  sg_entity_flags.h  sg_entity_types.h  sg_game_ui.h  sg_gamemode.cpp  sg_gamemode.h  sg_means_of_death.h  sg_misc.cpp  sg_misc.h  sg_muzzleflashes.h  sg_muzzleflashes_monsters.c  sg_pmove.cpp  sg_pmove.h  sg_pmove_attempt_2.cpp  sg_pmove_original.cpp  sg_pmove_slidemove.cpp  sg_pmove_slidemove.h  sg_qstring.h  sg_qstring.hpp  sg_qtag_memory.hpp  sg_qtag_string.hpp  sg_shared.h  sg_shared_fwd.h  sg_skm.cpp  sg_skm.h  sg_skm_modelinfo.cpp  sg_skm_modelinfo.h  sg_skm_rootmotion.cpp  sg_skm_rootmotion.h  sg_tempentity_events.h  sg_time.h  sg_usetarget_hints.cpp  sg_usetarget_hints.h
src/baseq2rtxp/svgame/: _old_genptr.py  _old_m_move.cpp  g_ai.cpp  g_chase.cpp  g_cmds.cpp  g_combat.cpp  g_func.cpp  g_gamemode.cpp  g_items.cpp  g_local.h  g_main.cpp  g_misc.cpp  g_monster.cpp  g_phys.cpp  g_ptrs.cpp  g_save.cpp  g_save.h  g_spawn.cpp  g_spotlight.cpp  g_target.cpp  g_trigger.cpp  g_turret.cpp  g_utils.cpp  g_weapon.cpp  m_actor.cpp  m_berserk.cpp  m_boss2.cpp  m_boss3.cpp  m_boss31.cpp  m_boss32.cpp  m_brain.cpp  m_chick.cpp  m_flipper.cpp  m_float.cpp  m_flyer.cpp  m_gladiator.cpp  m_gunner.cpp  m_hover.cpp  m_infantry.cpp  m_insane.cpp  (+73 more)
src/client/: cin.cpp  cl_ascii.cpp  cl_client.h  cl_clientgame.cpp  cl_console.cpp  cl_demo.cpp  cl_entities.cpp  cl_http.cpp  cl_input.cpp  cl_keys.cpp  cl_locs.cpp  cl_main.cpp  cl_net_chan.cpp  cl_parse.cpp  cl_precache.cpp  cl_predict.cpp  cl_refresh.cpp  cl_scoreboard.cpp  cl_screen.cpp  cl_view.cpp  cl_world.cpp  cl_world.h  clgame.cpp  client.h  console.cpp  crc.cpp  demo.cpp  download.cpp  effects.cpp  entities.cpp  http.cpp  input.cpp  keys.cpp  locs.cpp  main.cpp  newfx.cpp  parse.cpp  precache.cpp  predict.cpp  refresh.cpp  (+4 more)
src/client/sound/: al.c  al.cpp  dma.c  dma.cpp  main.c  main.cpp  mem.c  mem.cpp  ogg.c  ogg.cpp  sound.h
src/client/ui/: _scoreboard.cpp  demos.cpp  editor_rmaterial.cpp  menu.cpp  playerconfig.cpp  playermodels.cpp  script.cpp  servers.cpp  ui.cpp  ui.h
src/common/: async.c  bsp.cpp  cmd.cpp  cmodel.cpp  collisionmodel.cpp  common.c  common.cpp  cvar.cpp  field.cpp  fifo.cpp  files.cpp  huffman.cpp  math.cpp  messages.cpp  messaging.cpp  model_iqm.c  mono.cpp  msg.cpp  pmove.cpp  precache_context.cpp  prompt.cpp  sizebuf.cpp  utils.cpp  zone.cpp
src/mono_servergame/: CMakeLists.txt  Enumerators.cs  Flags.cs  GameMain.cs  ServerGame.cs  ServerGameExports.cs  ServerGameImports.cs
src/refresh/: images.c  images.cpp  model_iqm.c  model_iqm.cpp  model_sp2_json.cpp  models.c  models.cpp
src/server/: ac.cpp  commands.cpp  entities.cpp  game.c  game.cpp  init.cpp  main.cpp  models.cpp  mvd.cpp  save.cpp  send.cpp  server.h  servermono.cpp  servermono.h  sv_commands.cpp  sv_commands.h  sv_entities.cpp  sv_entities.h  sv_game.cpp  sv_game.h  sv_init.cpp  sv_init.h  sv_main.cpp  sv_main.h  sv_models.cpp  sv_models.h  sv_save.cpp  sv_save.h  sv_send.cpp  sv_send.h  sv_server.h  sv_user.cpp  sv_user.h  sv_world.cpp  sv_world.h  svgame.cpp  user.cpp  world.cpp
src/shared/: info_strings.cpp  m_flash.c  math.cpp  shared.cpp  string_utilities.cpp
src/tools/: CMakeLists.txt  matrix_verify.cpp
src/unix/: hunk.c  system.c  video.cpp
src/windows/: client.h  debug.cpp  hunk.cpp  pthread.c  system.cpp  wave.c
(+1023 files in other folders)
